# mod-manager

./: .rustfmt.toml  Cargo.toml
src/: core.rs  gui.rs  main.rs  utils.rs
src/core/: deployers.rs  errors.rs  games.rs  mods.rs
src/core/games/: game.rs  game_index.rs
src/gui/: app.rs  dialogs.rs  root.rs  storage.rs  widgets.rs
src/gui/dialogs/: add_game.rs
src/gui/widgets/: tab_buttons.rs
src/utils/: fs.rs  mutex.rs  steam.rs
