[package]
name = "mod-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
dirs = "6.0.0"
egui = "0.34.2"
rfd = "0.17.2"
steamlocate = "2.1.0"
toml = "1.1.2"
winit = "0.30.13"

[dependencies.ahash]
version = "0.8.12"
features = ["serde"]

[dependencies.chrono]
version = "0.4.44"
features = ["serde"]

[dependencies.eframe]
version = "0.34.2"
features = ["persistence"]

[dependencies.serde]
version = "1.0.228"
features = ["derive", "rc"]

[dependencies.tokio]
version = "1.52.3"
features = ["rt", "rt-multi-thread"]

[dependencies.uuid]
version = "1.23.1"
features = ["serde", "v4"]
